--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -5,7 +5,7 @@
 <div class="row" id="make-transparent">
   <div class="col-lg-6 wrap-gene-results">
     <div class="list-group">
-      <h2 style="margin-top: 30px">Understanding Your Results</h2>
+      <h2 style="margin-top: 30px; color: deeppink">Understanding Your Results</h2>
       <p class="lead">We tested your genome for 3 diseases. Your results for the conditions tested are below. Click on a tab for more information.</p>
       <a href="#" class="modal-trigger" data-toggle="modal" 
       data-target="#glaucomaModal" id="a-glaucoma">Glaucoma
