--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -245,7 +245,7 @@
 
    <a href="#" class="modal-trigger" data-toggle="modal" 
     data-target="#genesDiseaseModal" id="a-genesDisease">
-      <img src="http://fc00.deviantart.net/fs70/f/2013/136/2/7/commision_for_dna_projecten_bv_version_2_1__logo__by_bastiaandegoede-d65fwi5.png" height="236" width="500" id="dna-gif">
+      <img src="/assets/images/geneladder.jpeg" height="236" width="500" id="dna-gif">
     </a>
     <div class="modal modal-fullreen fade" id="genesDiseaseModal" tabindex="-1" role="dialog" aria-labelledby="genesDiseaseModal" aria-hidden="true">
       <div class="modal-dialog modal-lg">
