--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -1,10 +1,10 @@
-<h1 style="font-size: 50px; margin-top: 176px; text-align: center; margin-bottom: 45px"> {{user}}'s Genetics 
+<h1 style="font-size: 50px; margin-top: 176px; text-align: center; margin-bottom: 45px"><strong id="index-title"> {{user}}'s </strong> Genetics 
 
 </h1>
 <div class="row" id="make-transparent">
   <div class="col-lg-6 wrap-gene-results">
     <div class="list-group">
-      <h2 style="margin-top: 30px; color: deeppink">Understanding Your Results</h2>
+      <h2 style="margin-top: 30px; color: deeppink"><strong id="index-title">Understanding Your Results</strong></h2>
       <p class="lead">We tested your genome for 3 diseases. Your results for the conditions tested are below. Click on a tab for more information.</p>
       <a href="#" class="modal-trigger" data-toggle="modal" 
       data-target="#glaucomaModal" id="a-glaucoma">Glaucoma
@@ -240,7 +240,7 @@
       </div>
     </div>
   <div class="col-lg-5">
-    <h2 style="margin-top: 50px; color: deeppink">Genes and Disease</h2>
+    <h2 style="margin-top: 50px"><strong id="index-title">Genes and Disease</strong></h2>
     <p class="lead">There are dozens of genes associated with retinal diseases.</p>
 
    <a href="#" class="modal-trigger" data-toggle="modal" 
@@ -454,7 +454,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h2 id="your-genome-h2">Your Genome</h2>
+    <h2 id="your-genome-h2"><strong id="index-title">Your Genome</strong></h2>
    {{!--  <p class="lead text-center">Your results for these tested conditions deviate significantly from the normal range. Your current and future health might be impacted.</p> --}}
     <div class="wrap-snps table-responsive">
       <table class="table table-hover" id="genes-table" cellspacing="0" cellpadding="0" border="0">
