--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -8,7 +8,7 @@
   <div class="col-lg-6 wrap-gene-results">
     <div class="list-group">
       <h2 style="margin-top: 30px; color: deeppink"><strong id="index-title">Understanding Your Results</strong></h2>
-      <p class="lead">We tested your genome for 3 diseases. Your results for the conditions tested are below. Click on a tab for more information.</p>
+      <p class="lead">We tested your genome and compared your genotype for your likelihood of developing Age Related Macular Degeneration. In addition, we tested your genome for Stargardt's Disease, and Glaucoma. Your results for the conditions tested are below. Click on a tab for more information.</p>
       <a href="#" class="modal-trigger" data-toggle="modal" 
       data-target="#glaucomaModal" id="a-glaucoma">Glaucoma
       <br>
