--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -1,6 +1,13 @@
 <h1 style="font-size: 50px; margin-top: 176px; text-align: center; margin-bottom: 45px"><strong id="index-title"> {{user.firstname}}'s </strong> Genetics 
 
 </h1>
+{{#if data.genes}}
+
+{{else}} {{! If they don't pay for the gene test, display text below}}
+<div class="modal-body genotypes-can-do">
+  <h2 class="lead" style="text-align: center"><a href="/charge">PURCHASE A GENE REPORT </a> to view your results.</h2>
+</div>
+{{/if}}
 <div class="container">
 
 
@@ -8,7 +15,8 @@
   <div class="col-lg-6 wrap-gene-results">
     <div class="list-group">
       <h2 style="margin-top: 30px; color: deeppink"><strong id="index-title">Understanding Your Results</strong></h2>
-      <p class="lead">We tested your genome and compared your genotype for your likelihood of developing Age Related Macular Degeneration. In addition, we tested your genome for Stargardt's Disease, and Glaucoma. Your results for the conditions tested are below. Click on a tab for more information.</p>
+
+      <p class="lead">We tested your genome and compared your genotype for your likelihood of developing certain types of Age Related Macular Degeneration. In addition, we tested your genome for Stargardt's Disease, and Glaucoma. Your results for the conditions tested are below. Click on a tab for more information.</p>
       <a href="#" class="modal-trigger" data-toggle="modal" 
       data-target="#glaucomaModal" id="a-glaucoma">Glaucoma
       <br>
@@ -16,7 +24,7 @@
       </a>
 
       <div class="modal modal-fullreen fade" id="glaucomaModal" tabindex="-1" role="dialog" aria-labelledby="glaucomaModal" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg results-modal">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
@@ -29,6 +37,7 @@
 
                 <h2 style="text-align: center">Your Results</h2>
               </div>
+              {{#if data.genes}}
               <div class="modal-body genotypes-can-do">
               {{#each data.genes}}
                 <p class="lead">We tested your genome for three SNPs (See Table Below) for Genes: {{diseases.0.diseasegenename}} and {{diseases.1.diseasegenename}} that have been shown to be associated with a risk of developing certain forms of Glaucoma, specifically: {{diseases.0.diseasename}} and {{diseases.8.diseasename}}. Your genotypes for Glaucoma are {{genotypes.rs28936694}} and {{genotypes.rs3825942}}, and {{genotypes.rs1048661}}. </p>
@@ -43,9 +52,15 @@
                 </ul>
               {{/each}}
               </div>
+              {{else}} {{! If they don't pay for the gene test, display text below}}
+              <div class="modal-body genotypes-can-do">
+                <p class="lead">Purchase a gene report to view your results.</p>
+              </div>
+              {{/if}}
               <div class="modal-header">
               <h2>About The Disease</h2>
               </div>
+              {{#if data.genes}}
               <div class="modal-body genotypes-can-do">
 
                   <p class="lead">Glaucoma is a group of eye diseases that damage the optic nerve (the bundle of nerve fibers that carries information from the eye to the brain) and can lead to vision loss and possibly blindness.</p>
@@ -61,9 +76,15 @@
                   <p class="lead">Open-angle glaucoma is three to four times more common in African Americans than in non-Hispanic whites. Between the ages of 45 and 64, glaucoma is fifteen times more likely to cause blindness in African Americans than in Caucasians.</p>
 
               </div>
+              {{else}} {{! If they don't pay for the gene test, display text below}}
+              <div class="modal-body genotypes-can-do">
+                <p class="lead">Purchase a gene report to view your results.</p>
+              </div>
+              {{/if}}
               <div class="modal-header">
               <h2>What You Can Do</h2>
               </div>
+              {{#if data.genes}}
               <div class="modal-body genotypes-can-do">
 
                 <p class="lead">Individuals at high risk for glaucoma should have a dilated-pupil eye examination at least every two years. Eye doctors use several tests to detect glaucoma.</p>
@@ -84,6 +105,11 @@
                   </li>
                 </ul>
               </div>
+              {{else}} {{! If they don't pay for the gene test, display text below}}
+              <div class="modal-body genotypes-can-do">
+                <p class="lead">Purchase a gene report to view your results.</p>
+              </div>
+              {{/if}}
               <div class="modal-footer">
                   <button type="button" class="btn btn-default" id="main-btn"data-dismiss="modal">Close</button>
                   
@@ -98,15 +124,16 @@
         <p>Learn more about your Stargardts risks</p>
       </a>
       <div class="modal modal-fullreen fade" id="stargardtsModal" tabindex="-1" role="dialog" aria-labelledby="stargardtsModal" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg results-modal">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
               <h2 class="modal-title" id="myModalLabel" style="text-align: center"></h2>
             </div>
             <div class="modal-header">
               <h2>Your Results</h2>
             </div>
+            {{#if data.genes}}
             <div class="modal-body genotypes-can-do">
               {{#each data.genes}}
                 <p class="lead">We tested your genome for three SNPs (See Table Below) for the {{diseases.6.diseasegenename}} Gene. {{diseases.6.diseasegenename}} has been shown to be associated with a risk of developing certain forms of Stargardt's Disease, specifically: {{diseases.6.diseasename}}. Your genotypes for Stargardt's Disease are {{genotypes.rs61753034}} and {{genotypes.rs61753033}}.</p>
@@ -120,9 +147,15 @@
                 </ul>
               {{/each}}   
             </div>
+            {{else}} {{! If they don't pay for the gene test, display text below}}
+            <div class="modal-body genotypes-can-do">
+              <p class="lead">Purchase a gene report to view your results.</p>
+            </div>
+            {{/if}}
             <div class="modal-header">
             <h2>About The Disease</h2>
             </div>
+            {{#if data.genes}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">The most common cause of Stargardt’s is an autosomal recessive mutation in a gene called ABCA4. This gene normally facilitates transport of a “used” form of vitamin A out of photoreceptors, the light sensitive cells in the retina. Without ABCA4, this material builds up in the retina and contributes to the formation of lipofuscin.</p>
               <br>
@@ -131,9 +164,15 @@
               <br>
               <p class="lead">Rarely, Stargardt disease can be caused by an autosomal dominant mutation in a gene called ELOVL4. This gene is responsible for the synthesis of very long chain fatty acids. In families with this form of the disease, one parent has the disease and 50 percent of his/her children inherit one copy of a mutated version of the ELOVL4 gene and develop the disease.</p> <br>
             </div>
+            {{else}} {{! If they don't pay for the gene test, display text below}}
+            <div class="modal-body genotypes-can-do">
+              <p class="lead">Purchase a gene report to view your results.</p>
+            </div>
+            {{/if}}
             <div class="modal-header">
               <h2>What You Can Do</h2>
             </div>
+            {{#if data.genes}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">Individuals with a family history for Stargardt's Disease should try to obtain a clinical diagnosis through genetic testing. </p>
               <ul class="list-group">
@@ -147,6 +186,11 @@
                 </li>             
               </ul>
             </div>
+            {{else}} {{! If they don't pay for the gene test, display text below}}
+            <div class="modal-body genotypes-can-do">
+              <p class="lead">Purchase a gene report to view your results.</p>
+            </div>
+            {{/if}}
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" id="main-btn" data-dismiss="modal">Close</button> 
             </div>
@@ -161,7 +205,7 @@
       </a>
       
       <div class="modal modal-fullreen fade" id="armdModal" tabindex="-1" role="dialog" aria-labelledby="armdModal" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg results-modal">
           <div class="modal-content">
             <div class="modal-header">
               
@@ -172,6 +216,7 @@
             <div class="modal-header">
               <h2>Your Results</h2>
             </div> 
+            {{#if data.genes}}
             <div class="modal-body genotypes-can-do">
                 <p class="lead">{{#each data.genes}}
                 <p class="lead">We tested your genome for five SNPs (See Table Below) for the {{diseases.2.diseasegenename}}, {{diseases.3.diseasegenename}}, {{diseases.4.diseasegenename}}, and {{diseases.5.diseasegenename}} Genes that have been shown to be associated with a risk of developing certain forms of ARMD, specifically: {{diseases.2.diseasename}}, {{diseases.4.diseasename}}, and {{diseases.5.diseasename}}. </p>
@@ -191,11 +236,16 @@
                 </ul>
               {{/each}}</p>     
             </div>
+            {{else}} {{! If they don't pay for the gene test, display text below}}
+            <div class="modal-body genotypes-can-do">
+              <p class="lead">Purchase a gene report to view your results.</p>
+            </div>
+            {{/if}}
 
             <div class="modal-header">
               <h2>About The Disease</h2>
             </div>
-
+            {{#if data.genes}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">There are two forms of AMD: dry and wet. It is possible for a person to suffer from both forms and for the disease to progress slowly or rapidly.</p>
               <br>
@@ -208,11 +258,15 @@
 
 
             </div>
-
+            {{else}} {{! If they don't pay for the gene test, display text below}}
+            <div class="modal-body genotypes-can-do">
+              <p class="lead">Purchase a gene report to view your results.</p>
+            </div>
+            {{/if}}
             <div class="modal-header">
               <h2>What You Can Do</h2>
             </div>
-
+            {{#if data.genes}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">Several genes are believed to be strongly associated with the risk of developing AMD:</p>
               <br>
@@ -235,6 +289,11 @@
                 </li>
               </ul>
             </div>
+            {{else}} {{! If they don't pay for the gene test, display text below}}
+            <div class="modal-body genotypes-can-do">
+              <p class="lead">Purchase a gene report to view your results.</p>
+            </div>
+            {{/if}}
             <div class="modal-footer">
               <button type="button" class="btn btn-default" id="main-btn" data-dismiss="modal">Close</button>               
             </div>
@@ -251,10 +310,10 @@
       <img src="/assets/images/geneladder.jpeg" height="236" width="500" id="dna-gif">
     </a>
     <div class="modal modal-fullreen fade" id="genesDiseaseModal" tabindex="-1" role="dialog" aria-labelledby="genesDiseaseModal" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
+      <div class="modal-dialog modal-lg results-modal">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
             <h2 class="modal-title" id="myModalLabel" style="text-align: center">GENES AND DISEASES</h2>
           </div>
           
@@ -454,11 +513,24 @@
     </div>
   </div>
 </div>
-
+<div class="row">
+  {{!-- <div class="col-sm-12 col-md-6">
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      Link with href
+    </a>
+    <div class="collapse" id="collapseExample">
+      <div class="well">
+        ...
+      </div>
+    </div>
+  </div> --}}
+</div>
 <div class="row">
   <div class="col-lg-12">
     <h2 id="your-genome-h2"><strong id="index-title">Your Genome</strong></h2>
+    {{#if data.genes}}
     <p class="lead text-center">Your results are in the table below. We tested your genome for 10 genetic mutations of clinical relevance. This is not an exhaustive list, but a high level overview. The table will display for you base pairs (Your Genotype). Click on each Gene or SNP for more information.</p>
+
     <div class="wrap-snps table-responsive">
       <table class="table table-hover" id="genes-table" cellspacing="0" cellpadding="0" border="0">
         <thead>
@@ -523,6 +595,11 @@
           
       </table>
     </div>
+    {{else}} {{! If they don't pay for the gene test, display text below}}
+    <div class="modal-body genotypes-can-do">
+      <p class="lead"><a href="/charge">PURCHASE A GENE REPORT </a> to view your results.</p>
+    </div>
+    {{/if}}
   </div>
 </div>
 </div>
