removed each statement

--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -4,7 +4,7 @@
 {{#if data.genes}}
 
 {{else}} {{! If they don't pay for the gene test, display text below}}
-<div class="modal-body genotypes-can-do">
+<div class="modal-body genotypes-can-do"> j
   <h2 class="lead" style="text-align: center"><a href="/charge">PURCHASE A GENE REPORT </a> to view your results.</h2>
 </div>
 {{/if}}
@@ -39,7 +39,7 @@
               </div>
               {{#if data.genes}}
               <div class="modal-body genotypes-can-do">
-              {{#each data.genes}}
+              {{!-- {{#each data.genes}} --}}
                 <p class="lead">We tested your genome for three SNPs (See Table Below) for Genes: {{diseases.0.diseasegenename}} and {{diseases.1.diseasegenename}} that have been shown to be associated with a risk of developing certain forms of Glaucoma, specifically: {{diseases.0.diseasename}} and {{diseases.8.diseasename}}. Your genotypes for Glaucoma are {{genotypes.rs28936694}}, {{genotypes.rs3825942}}, and {{genotypes.rs1048661}}. </p>
 
                 <ul class="list-group">
@@ -51,7 +51,7 @@
                   3. For {{diseases.8.snp}}, your Genotype is {{genotypes.rs1048661}}. {{diseases.8.risk}} {{diseases.8.descr}} This snp is located on {{diseases.8.location}}.
                   </li>
                 </ul>
-              {{/each}}
+              {{!-- {{/each}} --}}
               </div>
               {{else}} {{! If they don't pay for the gene test, display text below}}
               <div class="modal-body genotypes-can-do">
