--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -1,8 +1,8 @@
 <h1 style="font-size: 50px; margin-top: 176px; text-align: center; margin-bottom: 45px"><strong id="index-title"> {{user.firstname}}'s </strong> Genetics 
 
 </h1>
-{{#if data.genes}}
-<h2 class="lead" style="text-align: center">Testing.</h2>
+{{#if data.genes.genotypes}}
+
 {{else}} {{! If they don't pay for the gene test, display text below}}
 <div class="modal-body genotypes-can-do"> 
   <h2 class="lead" style="text-align: center"><a href="/charge">PURCHASE A GENE REPORT </a> to view your results.</h2>
@@ -37,9 +37,9 @@
 
                 <h2 style="text-align: center">Your Results</h2>
               </div>
-              {{#if data.genes}}
+              {{#if data.genes.genotypes}}
               <div class="modal-body genotypes-can-do">
-              {{#each data.genes}}
+              {{#each data.genes.genotypes}}
                 <p class="lead">We tested your genome for three SNPs (See Table Below) for Genes: {{diseases.0.diseasegenename}} and {{diseases.1.diseasegenename}} that have been shown to be associated with a risk of developing certain forms of Glaucoma, specifically: {{diseases.0.diseasename}} and {{diseases.8.diseasename}}. Your genotypes for Glaucoma are {{genotypes.rs28936694}}, {{genotypes.rs3825942}}, and {{genotypes.rs1048661}}. </p>
 
                 <ul class="list-group">
